# bitbake-setup

./: .gitignore  README.md  setup.cfg
